# development-utils

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
c_qemu_svd_stubs/: README.md
c_qemu_svd_stubs/template/: Kconfig.jinja2  Makefile.jinja2  device.h.jinja2  device_machine.c.jinja2  device_soc.c.jinja2  device_soc.h.jinja2  meson.build.jinja2  peripheral_qemu_stub.c.jinja2  peripheral_qemu_stub.h.jinja2  peripheral_regs.h.jinja2  template_jinja_filters.py
cxx17_mmio_interface/: README.md
cxx17_mmio_interface/include/: mmio_device.hpp
cxx17_mmio_interface/template/: device.hpp.jinja2  peripheral_mmio_regs.hpp.jinja2  test_device.cpp  test_device.cpp.jinja2
cxx20_mmio_interface/: README.md
cxx20_mmio_interface/include/: mmio_device.hpp
cxx20_mmio_interface/template/: device.hpp.jinja2  test_device.cpp.jinja2
cxx_mmio_interface/: README.md
cxx_mmio_interface/include/: mmio_device.hpp
cxx_mmio_interface/template/: device.hpp  peripheral_mmio_dev.hpp  peripheral_mmio_param.hpp  peripheral_mmio_regs.hpp
examples/: Makefile  dbml_jinja.sh  rdl_jinja.sh  svd_c_qemu_stubs.sh  svd_cxx17_headers.sh  svd_cxx20_headers.sh  svd_jinja.sh  yaml_jinja.sh
examples/dbml/: example_schema.dbml
examples/device_c_qemu_stubs/: CMSDK_CM3.h  DUALTIMER_qemu_stub.c  DUALTIMER_qemu_stub.h  DUALTIMER_regs.h  FPGAIO_qemu_stub.c  FPGAIO_qemu_stub.h  FPGAIO_regs.h  GPIO0_qemu_stub.c  GPIO0_qemu_stub.h  GPIO0_regs.h  GPIO1_qemu_stub.c  GPIO1_qemu_stub.h  GPIO1_regs.h  Makefile  SCC_qemu_stub.c  SCC_qemu_stub.h  SCC_regs.h  SPI_qemu_stub.c  SPI_qemu_stub.h  SPI_regs.h  TIMER0_qemu_stub.c  TIMER0_qemu_stub.h  TIMER0_regs.h  TIMER1_qemu_stub.c  TIMER1_qemu_stub.h  TIMER1_regs.h  UART0_qemu_stub.c  UART0_qemu_stub.h  UART0_regs.h  UART1_qemu_stub.c  UART1_qemu_stub.h  UART1_regs.h  UART2_qemu_stub.c  UART2_qemu_stub.h  UART2_regs.h  UART3_qemu_stub.c  UART3_qemu_stub.h  UART3_regs.h  UART4_qemu_stub.c  UART4_qemu_stub.h  (+4 more)
examples/device_cxx17_headers/: CMSDK_CM3.hpp  FPGAIO_mmio_dev.hpp  FPGAIO_mmio_param.hpp  FPGAIO_mmio_regs.hpp  GPIO0_mmio_dev.hpp  GPIO0_mmio_param.hpp  GPIO0_mmio_regs.hpp  GPIO1_mmio_dev.hpp  GPIO1_mmio_param.hpp  GPIO1_mmio_regs.hpp  Makefile  Makefile.clang  Makefile.gxx  SCC_mmio_dev.hpp  SCC_mmio_param.hpp  SCC_mmio_regs.hpp  SPI_mmio_dev.hpp  SPI_mmio_param.hpp  SPI_mmio_regs.hpp  TIMER0_mmio_dev.hpp  TIMER0_mmio_param.hpp  TIMER0_mmio_regs.hpp  TIMER1_mmio_dev.hpp  TIMER1_mmio_regs.hpp  UART0_mmio_dev.hpp  UART0_mmio_regs.hpp  UART1_mmio_dev.hpp  UART1_mmio_param.hpp  UART1_mmio_regs.hpp  UART2_mmio_dev.hpp  UART2_mmio_param.hpp  UART2_mmio_regs.hpp  UART3_mmio_param.hpp  UART3_mmio_regs.hpp  UART4_mmio_dev.hpp  UART4_mmio_regs.hpp  WDT_mmio_dev.hpp  WDT_mmio_param.hpp  WDT_mmio_regs.hpp  test_CMSDK_CM3.cpp  (+2 more)
examples/device_cxx20_headers/: CMSDK_CM3.hpp  DUALTIMER_mmio_dev.hpp  DUALTIMER_mmio_param.hpp  DUALTIMER_mmio_regs.hpp  GPIO0_mmio_dev.hpp  GPIO0_mmio_param.hpp  GPIO1_mmio_dev.hpp  GPIO1_mmio_regs.hpp  Makefile  SCC_mmio_param.hpp  SCC_mmio_regs.hpp  SPI_mmio_dev.hpp  SPI_mmio_param.hpp  TIMER0_mmio_dev.hpp  TIMER0_mmio_param.hpp  TIMER0_mmio_regs.hpp  TIMER1_mmio_param.hpp  TIMER1_mmio_regs.hpp  UART0_mmio_dev.hpp  UART0_mmio_param.hpp  UART0_mmio_regs.hpp  UART1_mmio_dev.hpp  UART1_mmio_regs.hpp  UART2_mmio_dev.hpp  UART2_mmio_param.hpp  UART3_mmio_dev.hpp  UART3_mmio_regs.hpp  UART4_mmio_param.hpp  UART4_mmio_regs.hpp  WDT_mmio_dev.hpp  WDT_mmio_param.hpp  WDT_mmio_regs.hpp  test_CMSDK_CM3.cpp  test_CMSDK_CM3.disasm
examples/device_cxx_headers/: DUALTIMER_mmio_dev.hpp  DUALTIMER_mmio_param.hpp  DUALTIMER_mmio_regs.hpp  FPGAIO_mmio_param.hpp  GPIO0_mmio_regs.hpp  Makefile  SCC_mmio_regs.hpp  TIMER1_mmio_dev.hpp  TIMER1_mmio_param.hpp  UART0_mmio_param.hpp  UART1_mmio_param.hpp  UART3_mmio_dev.hpp  UART3_mmio_param.hpp  UART3_mmio_regs.hpp  UART4_mmio_dev.hpp  test_CMSDK_CM3.disasm  test_single_write.cpp
examples/device_data/: rpi.dtb  rpi.dts  rpi.yaml
generators/: __init__.py  _version.py  dbml_jinja.py  idl_jinja.py  idl_jinja_bridle.py  jinja_filters.py  objdump_jinja.py  rdl_jinja.py  riscv_csr.py  riscv_csr_filters.py  svd_jinja.py  yaml_jinja.py  yaml_tags.py
tests/: test_generators.py
(+41 files in other folders)
